# ObsidianSyncLib

./: .gitignore  Cargo.toml  README.md  rustc-ice-2026-01-27T21_15_10-3766.txt  rustc-ice-2026-01-27T21_15_13-3830.txt
.cargo/: config.toml
.github/workflows/: rust.yml
ansicodes/: Cargo.toml
ansicodes/src/: lib.rs
ansicodes/src/ansi_colors/: README.md  ansi.rs  debug.rs  difference.rs  display.rs  get_term_info.rs  gradient.rs  lib.rs  mod_control_code.rs  parse_term_info.rs  style.rs  term_bd_info.rs  unix_term.rs  util.rs  windows.rs  write.rs
ansicodes/tests/: TODO  test.rs  test_ansi.rs  test_difference.rs  test_display.rs  test_escape_code.rs  test_style.rs
arena_backends/: Cargo.toml  README.md  TODO  bumpalo_herd.rs  bumpalo_herd_test.rs  lib.rs  rustc_arena.rs
barrier_not_idle/: Cargo.toml  README.md
barrier_not_idle/src/: Cargo.toml  Changelog.md  LICENSE-MIT  README.md  barrier_spinlock_mutex.rs  barrier_std_mutex.rs  lib.rs  relax.rs  rw_spinlock.rs  spinlock.rs  zerotrait.rs
bitfields/: lib.rs
bitfields_c2rust/: Cargo.toml  READMEC2RUST.md  lib.rs
bitfields_c2rust/build_error/: Cargo.toml  lib.rs
bitfields_c2rust/build_error_general/: Cargo.toml  lib.rs
bitfields_c2rust/field_type/: Cargo.toml  lib.rs
debug_more_asserts/: Cargo.toml
debug_more_asserts/src/: inner.rs  lib.rs
debug_more_asserts/std_test_asserts/: Cargo.toml
debug_more_asserts/std_test_asserts/src/: inner.rs
encodings/: Cargo.toml
encodings/src/: README.md  lib.rs  unic_scalar_to_utf8.rs  utf8.rs
rc_utils/: Cargo.toml  lib.rs  pm2_rc_vec.rs  str_friendly_rc_vec.rs  tiny_pm2_rc_vec.rs
rust_state_machine/: CHANGELOG.md  Cargo.toml  LICENCE  README.md
rust_state_machine/doc-example/: Cargo.toml
rust_state_machine/doc-example/src/: lib.rs
rust_state_machine/rust-fsm/: Cargo.toml
rust_state_machine/rust-fsm-dsl/: Cargo.toml
rust_state_machine/rust-fsm-dsl/src/: lib.rs  parser.rs
rust_state_machine/rust-fsm/src/: lib.rs
rust_state_machine/rust-fsm/tests/: circuit_breaker.rs  circuit_breaker_dsl.rs  circuit_breaker_dsl_custom_types.rs  simple.rs
src/: AccTokCrypt.rs  Config.rs  DirCheck.rs  Parser.rs  abstract__tokinezer.rs  abstract_parser.rs  auto_test_gen.rs  back_trace_debug.rs  bits_utils.rs  black_list_iterator.rs  debug.rs  debug_multi_thread.rs  lib.rs  number_utils.rs  optional_error.rs  str_utils.rs  tiny_log.rs  tokinezed.rs  utils.rs
tests/: back_trace_debug_test.rs  debug_test.rs  multi_thread_debug_test.rs  splitt_b_space_test.rs  str_utils_test.rs  test_abstract_parser.rs  test_iterators.rs  test_parser.rs  test_tokinizer.rs  test_utlis.rs
validation_transcoding/: Cargo.toml
