[package]
name = "obsidian_sync_lib"          
version = "0.1.0"
edition = "2024"
description = "A Rust library for Git sync obsidian using libgit2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Utishnik/ObsidianSyncLib"
keywords = ["git", "libgit2", "vcs"]
categories = ["development-tools::version-control"]

[lib]
name = "obsidian_sync_lib"          
path = "src/lib.rs"

[dependencies]
git2 = "0.20.2"
validator = { version = "0.16", features = ["derive"] }
dotenvy = "0.15.7"
backtrace = "0.3"
serde_json = "1.0"
tinyvec = "1.8"
itoa = "1.0"
time = "0.3"

[workspace]
members = ["ansicodes",
"barrier_not_idle",
"encodings",
"arena_backends",
]

resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.90", features = ["derive"] }

[profile.release]
opt-level = "z"      # оптимизация по размеру
lto = true           # link-time optimization
codegen-units = 1    # лучше качество оптимизации
strip = true         # удалить отладочные символы
panic = "abort"      # без unwinding

[profile.dev]
opt-level = "s"      # мега оптимизация по размеру
lto = true           # link-time optimization

[[test]]
name = "test_tokinezer"  
path = "tests/test_tokinizer.rs"

[[test]]
name = "test_iterators"
path = "tests/test_iterators.rs"

[[test]]
name = "test_parser"
path = "tests/test_parser.rs"

[[test]]
name = "test_backtrace_debug"
path = "tests/back_trace_debug_test.rs"

[[test]]
name = "splitt_b_space_test"
path = "tests/splitt_b_space_test.rs"

[[test]]
name = "debug_test"
path = "tests/debug_test.rs"

[[test]]
name = "multi_thread_debug_test"
path = "tests/multi_thread_debug_test.rs"

[[test]]
name = "test_utils"
path = "tests/test_utlis.rs"

[[test]]
name = "str_utils_test"
path = "tests/str_utils_test.rs"

[[test]]
name = "abstract_parser_test"
path = "tests/test_abstract_parser.rs"