[package]
authors = ["Utishnik",
"Ryan Scheel (Havvy)",
"Josh Triplett",
"Linus Unnebäck",
"The Nushell Project Developers"
]
name = "ansicodes"
description = "Library for ANSI escape sequences"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = true

[lib]
path = "src/lib.rs"

[dependencies.serde]
version = "1.0.90"
features = ["derive"]
optional = true

[target.'cfg(target_os="windows")'.dependencies.winapi]
version = "0.3.4"
features = ["consoleapi", "errhandlingapi", "fileapi", "handleapi", "processenv"]

[[test]]
name = "test_escape_codes"
path = "ansicodes/tests/test_escape_codes.rs"
