[package]
authors = ["Utishnik",
"Ryan Scheel (Havvy)",
"Josh Triplett",
"Linus Unnebäck",
"The Nushell Project Developers"
]
name = "ansicodes"
description = "Library for ANSI escape sequences"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = true

[lib]
path = "src/ansi_colors/lib.rs"

[target.'cfg(windows)'.dependencies.windows]
version = ">=0.59, <=0.61"
package = "windows-sys"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_Security"
]


[dependencies]
doc-comment = "0.3.3"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"

[features]
default = ["std"]  
std = []
gnu_legacy = []

[[test]]
name = "test_escape_codes"
path = "tests/test_escape_codes.rs"

[[test]]
name = "test_style"
path = "tests/test_style.rs"

[[test]]
name = "test"
path = "tests/test.rs"

[[test]]
name = "test_difference"
path = "tests/test_difference.rs"

[[test]]
name = "test_gradient"
path = "tests/test_display.rs"

[[test]]
name = "test_ansi"
path = "tests/test_ansi.rs"