[package]
name = "rust-arena-api"
description = "A framework and a DSL for building finite state machines in Rust"
repository = ""
license = "MIT"
categories = ["allocator", "arena-allocator"]
version = "0.5.0"
authors = ["Utishnik and rust lang"]
edition = "2024"

[lib]
name = "arena_rustc"          
path = "lib.rs"

[dependencies]
smallvec = "1.15.1"

[features]
unstable = []