[package]
name = "rust-arena-api"
description = "A crate for a convenient API to interact with arena allocators"
repository = ""
license = "MIT"
categories = ["allocator", "arena-allocator"]
version = "0.5.0"
authors = ["Utishnik"]
edition = "2024"

[lib]
name = "arena_rustc"          
path = "lib.rs"

[dependencies]
smallvec = "1.15.1"
bumpalo = { version = "3.19.1", features = [
    "allocator_api",
    "collections", "boxed"
]}
allocator-api2 = "0.4.0"

[features]
unstable = []