[package]
name = "BarrierNotIdle"          
version = "0.1.0"
edition = "2024"
description = ""
license = "MIT OR Apache-2.0"
repository = ""


[lib]
name = "BarrierNotIdle"          
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[features]
arc_lock = ["lock_api/arc_lock"]
owning_ref = ["lock_api/owning_ref"]

[dependencies]
lock_api = "0.4.7"

[dev-dependencies]
rand = "0.8"

[package.metadata.release]
pre-release-replacements = [
    { file = "Changelog.md", search = "# Unreleased", replace = "# Unreleased\n\n# {{version}} – {{date}}", exactly = 1 },
]
pre-release-commit-message = "Release version {{version}}"
