[package]
name = "tiny_encodings_utils_lib"          
version = "0.1.0"
edition = "2024"
description = "A Rust tiny library for impl utils encodings"
license = "MIT"
repository = ""

[lib]
name = "tiny_encodings_utils_lib"          
path = "src/lib.rs"

[dependencies]
arbitrary = { version = "1.3.0", features = ["derive"], optional = true }
obsidian_sync_lib = { path = ".." }  

[features]
default = ["std", "unicode"]
std = []
arbitrary = ["dep:arbitrary"]


unicode = [
  "unicode-age",
  "unicode-bool",
  "unicode-case",
  "unicode-gencat",
  "unicode-perl",
  "unicode-script",
  "unicode-segment",
]
unicode-age = []
unicode-bool = []
unicode-case = []
unicode-gencat = []
unicode-perl = []
unicode-script = []
unicode-segment = []