[package]
name = "bitfield_c2rust_api_build_error"          
license = "Apache 2.0 and MIT"
description = "A subcrate for a convenient API to interact with bitfields"
categories = ["error", "build"]
version = "0.1.0"
authors = ["Utishnik"]
edition = "2024"

[features]
std = []  
no_std = []

[dependencies]
obsidian_sync_lib = { path = "../..", default-features = false, features = ["debug"] }  

[lib]
name = "bitfield_c2rust_api_build_error"          
path = "lib.rs"