[package]
name = "bitfield_c2rust_api_build_error"          
license = "Apache 2.0 and MIT"
description = "A subcrate for a convenient API to interact with bitfields"
categories = ["error", "build"]
version = "0.1.0"
authors = ["Utishnik"]
edition = "2024"

[dependencies]
obsidian_sync_lib = { path = "../..", default-features = false, features = ["debug"] }  
proc-macro2 = "=1.0.103"
syn = { version = "=2.0.106", features = ["full"] }
quote = "=1.0.40"

[features]
unstable = []
stable = []
comp_err = []
default = ["stable","comp_err"]
no_std = []

[lib]
name = "bitfield_c2rust_api_build_error"    
proc-macro = true      
path = "lib.rs"