[package]
name = "bitfield_c2rust_api_field_type"          
license = "Apache 2.0 and MIT"
description = "A subcrate for a convenient API to interact with bitfields"
categories = ["bitfield", "bitfield-api"]
version = "0.5.0"
authors = ["Utishnik and C2Rust project"]
edition = "2024"

[features]
default = ["std"]  #default std
std = []  
no_std = []

[dependencies]
obsidian_sync_lib = { path = "../.." }  

[lib]
name = "bitfield_c2rust_api_field_type"          
path = "lib.rs"