[package]
name = "std_more_debug_asserts"
description = ""
repository = ""
license = "Unlicense OR MIT OR Apache-2.0 OR CC0-1.0"
categories = ["asserts", "debug"]
version = "0.5.0"
authors = ["Utishnik + Thom Chiovoloni <chiovolonit@gmail.com>"]
edition = "2021"

[lib]
name = "std_more_debug_asserts"          
path = "src/lib.rs"

[dependencies]
more_debug_asserts = {path = ".."}
obsidian_sync_lib = {path = "../.."} #todo когда нибудь вынесу в отдельный crate или фичу